# nimblephysics

./: .appveyor.yml  .azure-pipelines.yml  .dockerignore  .gitignore  .travis.yml  Brewfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DIFFDART_DEVNOTE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  VERSION.txt  generate_pyi_stubs.sh  get_download_stats.sh  mac.sh  mac_rebuild.sh  manylinux.sh  package.xml  patch_nimble_binary.sh  patch_nimble_python.sh  patch_nimble_stubs.sh  profile_analyze.sh  profile_record.sh  run  setup.py  sonar-project.properties
cpp14/dart/: CMakeLists.txt  DARTConfig.cmake  my_class.cpp  my_class.hpp
cpp14/gazebo/: CMakeLists.txt
dart/dynamics/: ArrowShape.cpp  ArrowShape.hpp  BallJoint.cpp  BallJoint.hpp  BodyNode.cpp  BodyNode.hpp  BodyNodeDifferential.cpp  BodyNodeDifferential.hpp  BoxShape.cpp  BoxShape.hpp  CMakeLists.txt  CapsuleShape.cpp  CapsuleShape.hpp  CompositeJoint.cpp  CompositeJoint.hpp  ConeShape.cpp  ConeShape.hpp  ConstantCurveIncompressibleJoint.cpp  ConstantCurveIncompressibleJoint.hpp  ConstantCurveJoint.cpp  ConstantCurveJoint.hpp  CustomJoint.cpp  CustomJoint.hpp  CylinderShape.cpp  CylinderShape.hpp  DegreeOfFreedom.cpp  DegreeOfFreedom.hpp  DistanceSensor.cpp  DistanceSensor.hpp  EllipsoidJoint.cpp  EllipsoidJoint.hpp  EllipsoidShape.cpp  EllipsoidShape.hpp  EndEffector.cpp  EndEffector.hpp  EulerFreeJoint.cpp  EulerFreeJoint.hpp  EulerJoint.cpp  EulerJoint.hpp  FixedFrame.cpp  (+87 more)
dart/exo/: CMakeLists.txt  ExoSolverPinnedContact.cpp  ExoSolverPinnedContact.hpp
dart/neural/: BackpropSnapshot.cpp  BackpropSnapshot.hpp  CMakeLists.txt  ClassicBackpropSnapshot.cpp  ClassicBackpropSnapshot.hpp  ClassicConstrainedGroupGradientMatrices.cpp  ClassicConstrainedGroupGradientMatrices.hpp  ConstrainedGroupGradientMatrices.cpp  ConstrainedGroupGradientMatrices.hpp  DiffNode.cpp  DiffNode.hpp  DifferentiableConstraint.cpp  DifferentiableConstraint.hpp  DifferentiableContactConstraint.cpp  DifferentiableContactConstraint.hpp  DifferentiableExternalForce.cpp  DifferentiableExternalForce.hpp  IKMapping.cpp  IKMapping.hpp  IdentityMapping.cpp  IdentityMapping.hpp  MappedBackpropSnapshot.cpp  MappedBackpropSnapshot.hpp  Mapping.cpp  Mapping.hpp  MassedBackpropSnapshot.cpp  MassedBackpropSnapshot.hpp  MassedConstrainedGroupGradientMatrices.cpp  MassedConstrainedGroupGradientMatrices.hpp  NeuralConstants.hpp  NeuralUtils.cpp  NeuralUtils.hpp  RestorableSnapshot.cpp  RestorableSnapshot.hpp  WithRespectTo.cpp  WithRespectTo.hpp  WithRespectToDamping.cpp  WithRespectToDamping.hpp  WithRespectToMass.cpp  WithRespectToMass.hpp  (+2 more)
dart/performance/: CMakeLists.txt  PerformanceLog.cpp  PerformanceLog.hpp
dart/proto/: CMakeLists.txt  Eigen.proto  GUI.proto  MPC.proto  MPCServer.cpp  MPCServer.hpp  SerializeEigen.cpp  SerializeEigen.hpp  SubjectOnDisk.proto  TrajectoryRollout.proto
dart/realtime/: CMakeLists.txt  ControlLog.cpp  ControlLog.hpp  MPC.cpp  MPC.hpp  MPCLocal.cpp  MPCLocal.hpp  MPCRemote.cpp  MPCRemote.hpp  MappedTargetReachingCost.cpp  MappedTargetReachingCost.hpp  Millis.cpp  Millis.hpp  ObservationLog.cpp  ObservationLog.hpp  RealTimeControlBuffer.cpp  RealTimeControlBuffer.hpp  RealtimeWorld.cpp  RealtimeWorld.hpp  SSID.cpp  SSID.hpp  TargetReachingCost.cpp  TargetReachingCost.hpp  Ticker.cpp  Ticker.hpp  UnscentedKalmanFilter.cpp  UnscentedKalmanFilter.hpp  VectorLog.cpp  VectorLog.hpp  iLQRLocal.cpp  iLQRLocal.hpp
dart/server/: CMakeLists.txt  GUIRecording.cpp  GUIRecording.hpp  GUIStateMachine.cpp  GUIStateMachine.hpp  GUIWebsocketServer.cpp  GUIWebsocketServer.hpp  RawJsonUtils.cpp  RawJsonUtils.hpp  WebsocketServer.cpp  WebsocketServer.hpp
dart/trajectory/: AbstractShot.cpp  AbstractShot.hpp  CMakeLists.txt  IPOptOptimizer.cpp  IPOptOptimizer.hpp  IPOptShotWrapper.cpp  IPOptShotWrapper.hpp  LossFn.cpp  LossFn.hpp  MultiShot.cpp  MultiShot.hpp  OptimizationRecord.cpp  OptimizationRecord.hpp  Optimizer.cpp  Optimizer.hpp  Problem.cpp  Problem.hpp  SGDOptimizer.cpp  SGDOptimizer.hpp  SingleShot.cpp  SingleShot.hpp  Solution.cpp  Solution.hpp  TrajectoryConstants.hpp  TrajectoryRollout.cpp  TrajectoryRollout.hpp
examples/hello_world/: CMakeLists.txt  main.cpp
gazebo/: CMakeLists.txt  main.cpp
python/_diffdart/: CMakeLists.txt  diffdart.cpp  eigen_geometry_pybind.cpp
python/_nimblephysics/: CMakeLists.txt  eigen_geometry_pybind.cpp  eigen_geometry_pybind.h  eigen_pybind.h  nimblephysics.cpp
python/dartpy/: CMakeLists.txt  dartpy.cpp  eigen_geometry_pybind.cpp
simulator/: CMakeLists.txt  Engine.cpp  MainMenuWidget.cpp  MainMenuWidget.hpp  SelectManager.hpp  Simulator.cpp  Simulator.hpp  main.cpp
simulator/widgets/: MainMenuWidget.hpp  PropertyGridWidget.cpp  TestWidget.cpp  TestWidget.hpp
unittests/: CMakeLists.txt  GradientTestUtils.hpp  TestHelpers.hpp  TrajectoryTestUtils.hpp  testKinematics.cpp_  testLemke.cpp  testSE3.cpp  testSO3.cpp
unittests/benchmarks/: CMakeLists.txt  bench_Basic.cpp  bench_Derivatives.cpp  bench_Featherstone.cpp  bench_Jacobians.cpp
unittests/comprehensive/: CMakeLists.txt  test_AtlasTrajectory.cpp  test_Benchmarks.cpp  test_Building.cpp  test_Cartpole.cpp  test_CatapultTrajectory.cpp  test_CollideGradient.cpp  test_Collision.cpp  test_Constraint.cpp  test_DampGradient.cpp  test_DiffNode.cpp  test_DifferentialDynamics.cpp  test_Differentials.cpp  test_Distance.cpp  test_Dynamics.cpp  test_ForwardKinematics.cpp  test_Frames.cpp  test_FullAcrobot.cpp  test_FullArm.cpp  test_FullContactCartpole.cpp  test_FullDoublependulum.cpp  test_FullWhip.cpp  test_GUIRecording.cpp  test_GUIWebsocketServer.cpp  test_Gradients.cpp  test_HalfCheetahRealtime.cpp  test_HalfCheetahTrajectory.cpp  test_InverseKinematics.cpp  test_Joints.cpp  test_KR5Trajectory.cpp  test_Mappings.cpp  test_MetaSkeleton.cpp  test_MultiObjectiveOptimization.cpp  test_ParallelOps.cpp  test_ParallelPosAndVel.cpp  test_Proto.cpp  test_Raycast.cpp  test_Realtime.cpp  test_SaddlepointEscape.cpp  test_Server.cpp  (+14 more)
unittests/integration/: CMakeLists.txt
unittests/regression/: CMakeLists.txt  test_Arnold2013Synthetic.cpp  (+12 more)
(+12524 files in other folders)
